multi-ride-maps/deploy-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-be-multi-ride
  namespace: multi-ride-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-be-multi-ride
  template:
    metadata:
      labels:
        app: app-be-multi-ride
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: bend-multi-ride
          image: naveensasalu/multi-ride-backend:064c2319a8be6efcccf5fb0ca2159e9876af0c06
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          ports:
            - containerPort: 5000
      volumes:
        - name: tmp
          emptyDir: {}
