multi-ride-maps/deploy-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-fe-multi-ride
  namespace: multi-ride-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-multi-ride
  template:
    metadata:
      labels:
        app: app-multi-ride
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: fend-multi-ride
          image: naveensasalu/multi-ride-frontend:1.0.1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: nginx-cache
              mountPath: /var/cache/nginx
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          ports:
            - containerPort: 3000
      volumes:
        - name: tmp
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
