multi-ride-maps/svc-fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-fe-multi-ride
  namespace: multi-ride-ns
spec:
  selector:
    app: app-fe-multi-ride
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
